k8s/kratos/kratos-ui-node.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos-ui-node
  namespace: kratos
  labels:
    app: kratos-ui-node
spec:
  selector:
    matchLabels:
      app: kratos-ui-node
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kratos-ui-node
    spec:
      containers:
        - name: kratos-ui-node
          image: oryd/kratos-selfservice-ui-node:v0.10.1
          args:
          ports:
            - name: kratos-ui-node
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
