k8s/kratos/kratos-http-service.yaml
# Source: kratos/templates/service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: kratos-public-clusterip
  namespace: kratos
  labels:
    app.kubernetes.io/name: kratos
    app.kubernetes.io/instance: kratos
    app.kubernetes.io/version: 'v0.9.0-alpha.3'
spec:
  type: ClusterIP
  ports:
    - port: 4433
      targetPort: http-public
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kratos
    app.kubernetes.io/instance: kratos
---
apiVersion: v1
kind: Service
metadata:
  name: kratos-admin-clusterip
  namespace: kratos
  labels:
    app.kubernetes.io/name: kratos
    app.kubernetes.io/instance: kratos
    app.kubernetes.io/version: 'v0.9.0-alpha.3'
spec:
  type: ClusterIP
  ports:
    - port: 4434
      targetPort: http-admin
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kratos
    app.kubernetes.io/instance: kratos
