k8s/kratos/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos-pg
  namespace: kratos
  labels:
    app: kratos-pg
spec:
  selector:
    matchLabels:
      app: kratos-pg
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kratos-pg
    spec:
      containers:
        - name: kratos-pg
          image: 'postgres:14'
          args:
          ports:
            - name: kratos-pg
              containerPort: 5432
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - exec pg_isready --host $POD_IP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - exec pg_isready --host $POD_IP
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 256Mi

          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data/pgdata
              subPath: kratos-pg-db
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: kratos-pg
---
apiVersion: v1
kind: Service
metadata:
  name: kratos-pg
  labels:
    app: kratos-pg
spec:
  type: ClusterIP
  ports:
    - name: kratos-pg
      port: 5432
      targetPort: kratos-pg
  selector:
    app: kratos-pg
