k8s/kratos/kratos-ui-virtual-service.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: kratos
  namespace: gloo-system
spec:
  displayName: kratos
  virtualHost:
    domains:
      - kratos.localhost
    routes:
      # - matchers:
      #     - prefix: /admin
      #   routeAction:
      #     single:
      #       upstream:
      #         name: kratos-kratos-ui-node-clusterip-3000
      #         namespace: gloo-system
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: kratos-kratos-ui-node-clusterip-3000
              namespace: gloo-system
    options:
      cors:
        allowOrigin: ['*']
        allowMethods: [GET, PUT, DELETE, POST, OPTIONS]
        allowHeaders:
          [
            keep-alive,
            user-agent,
            cache-control,
            content-type,
            content-transfer-encoding,
            custom-header-1,
            x-accept-content-transfer-encoding,
            x-accept-response-streaming,
            x-user-agent,
            x-grpc-web,
            grpc-timeout,
          ]
        maxAge: '1728000'
